--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         <th scope="col">Minutes Away</th>
                       </tr>
                     </thead>
-                    <tbody id = "curr-emp">
+                    <tbody id = "curr-trains">
                     </tbody>
                     </table>
                 </div>
@@ -62,7 +62,7 @@
                         </div>
                         <div class="form-group">
                                 <label for="FirstTrain">First Train Time (HH:mm - Military Time)</label>
-                                <input type="date" class="form-control" id="first-train" placeholder="">   
+                                <input type="time" class="form-control" id="first-train" placeholder="">   
                         </div>
                         <div class="form-group">
                                 <label for="frequency">Frequency(min)</label>
